--- a/service.yaml
+++ b/service.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ .Release.Name }}-service
+  name: agusjuli-echo-service
 spec:
-  type: {{ .Values.service.type }}
-  selector:
-    app: {{ .Release.Name }}
   ports:
-  - protocol: TCP
-    port: {{ .Values.service.port }}
-    targetPort: 80
+    - protocol: TCP
+      port: 80
+      targetPort: 5678
