--- a/service.yaml
+++ b/service.yaml
@@ -1,9 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: agusjuli-echo-service
+  name: arpita-service
 spec:
+  selector:
+    app.kubernetes.io/name: arpApp
   ports:
     - protocol: TCP
-      port: 80
-      targetPort: 5678
+      port: 82
+      targetPort: 9376
